<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app    ="http://schemas.android.com/apk/res-auto"
    xmlns:tools  ="http://schemas.android.com/tools"

    android:layout_width ="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.main.MainActivity">

    <!-- 1- toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"

        android:layout_width ="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"

        app:title="@string/app_name" />

    <!-- 2- guidelines -->
    <!-- 2.1- start guideline -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"

        android:layout_width ="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintGuide_begin="@dimen/layout_extra_padding" />
    <!-- 2.2- end guideline -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"

        android:layout_width ="wrap_content"
        android:layout_height="wrap_content"
        android:orientation  ="vertical"

        app:layout_constraintGuide_end="@dimen/layout_extra_padding" />

    <!-- 3- Converter de -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_from"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width ="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/layout_padding"
        android:layout_marginEnd="@dimen/layout_half_padding"

        app:layout_constraintEnd_toStartOf  ="@id/til_to"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf ="@id/toolbar"

        android:hint="@string/converter_de" >

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id ="@+id/tv_from"

            android:layout_width ="match_parent"
            android:layout_height="match_parent"
            android:focusable    ="false"
            android:inputType ="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 4- Para -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_to"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width ="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_half_padding"

        app:layout_constraintEnd_toEndOf  ="@id/guide_end"
        app:layout_constraintStart_toEndOf="@id/til_from"
        app:layout_constraintTop_toTopOf  ="@id/til_from"

        android:hint="@string/para" >

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/tv_to"

            android:layout_width ="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 5- Valor à converter -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_valueIn"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width ="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_padding"

        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf    ="@id/guide_end"
        app:layout_constraintTop_toBottomOf ="@id/til_from"

        android:hint="@string/valor_moedafrom" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width ="match_parent"
            android:layout_height="match_parent"
            android:inputType    ="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 6- Valor-resultado -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_result"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width    ="0dp"
        android:layout_height   ="wrap_content"
        android:layout_marginTop="@dimen/layout_padding"

        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf    ="@id/guide_end"
        app:layout_constraintTop_toBottomOf ="@id/til_valueIn"

        android:hint="@string/valor_moedato" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width ="match_parent"
            android:layout_height="match_parent"
            android:focusable    ="false"

            android:inputType    ="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 7- Botão converter -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_converter"

        android:layout_width ="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_padding"
        android:enabled         ="false"

        app:layout_constraintEnd_toEndOf    ="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf ="@id/tv_result"

        android:text="@string/converter"/>

    <!-- 8- Botão salvar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"

        android:layout_width ="0dp"
        android:layout_height="wrap_content"
        android:enabled      ="false"

        app:layout_constraintEnd_toEndOf    ="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintBottom_toBottomOf ="parent"

        android:text="@string/salvar"/>

</androidx.constraintlayout.widget.ConstraintLayout>